# DeepResearchAgent

./: .gitignore  LICENSE  Makefile  README.md  README_CN.md  WEB_UI_README.md  debug_models.py  install_webui.sh  log.txt  main.py  pyproject.toml  requirements.txt  requirements_webui.txt  test_ui_simulation.py  test_ui_steps.py  test_websocket.py
.github/instructions/: general.instructions.md
configs/: config_example.toml  config_gaia.toml  config_gemini.toml  config_hle.toml  config_mcp.toml  config_qwen.toml  config_webui.toml
docs/: python_interpreter_sandbox.md
examples/: run_example.py  run_gaia.py  run_hle.py  run_mcp.py
src/: registry.py
src/agent/: __init__.py  agent.py  reformulator.py
src/base/: __init__.py  async_multistep_agent.py  code_agent.py  multistep_agent.py  tool_calling_agent.py
src/config/: __init__.py  cfg.py
src/dataset/: __init__.py  huggingface.py
src/exception/: __init__.py  error.py
src/logger/: __init__.py  logger.py  monitor.py
src/mcp/: __init__.py  adapter.py  client.py  mcpadapt.py  server.py
src/memory/: __init__.py  memory.py
src/metric/: __init__.py
tests/: test_analyzer.py  test_browser_use.py  test_dataset.py  test_local_python_executor.py  test_mdconverter.py  test_models.py  test_python_interpreter.py  test_researcher.py  test_web_fetcher.py  test_web_searcher.py
web_ui/: README.md  REAL_TIME_MONITORING.md  api.py  app.py  demo.py  frontend.jsx  launcher.py  launcher_enhanced.py  package.json  real_time_demo.html  real_time_monitor.js  requirements.txt  start.sh  utils.py  visual_assets.py
(+62 files in other folders)
